Add profile page component Add iOS/md popover behavior

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <ion-button (click)="presentPopover({event: $event, mode: 'ios' })">iOS popover</ion-button>
+  <ion-button color="secondary" (click)="presentPopover({ event: $event, mode: 'md' })">MD popover</ion-button>
 </ion-content>
